SE1_P_2 packaging finished